# underfloor-heating-thermostat

./: .gitignore  Cargo.toml  Makefile  README.md  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
electricity-price/: multiday.json  singleday.json
src/control/: Cargo.toml
src/control/src/: config.rs  lib.rs  state.rs  thermistor.rs
src/main/: Cargo.toml  build.rs
src/main/.cargo/: config.toml
src/main/src/: adc.rs  config.rs  electricity_price.rs  heating.rs  http.rs  i2c.rs  main.rs  measurement.rs  status.rs  trigger.rs  wifi.rs
src/main/src/adc/: config.rs
src/main/src/config/: private.rs
src/main/src/heating/: event.rs
src/main/src/i2c/: event.rs
src/main/src/measurement/: event.rs
src/main/src/status/: event.rs
src/main/src/trigger/: event.rs
src/ntc-measurement/: Cargo.toml
