[workspace]
resolver = "2"

members = [
    "src/control",
    "src/ntc-measurement",
    "src/main",
]

[workspace.dependencies]
anyhow = { version = "1.0.89", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
