[workspace]
resolver = "2"

members = [
    "src/control",
    "src/main",
]
default-members = ["src/main"]

[workspace.dependencies]
anyhow = { version = "1.0.89", default-features = false }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
