[package]
name = "waveplus-nostd"
version = "0.1.0"
authors = ["Simon Jagoe <simon@simonjagoe.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.0", features = [ "esp32c6" ] }
esp-println = { version = "0.12.0", features = ["esp32c6", "log"] }
log = { version = "0.4.22" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.10.1", features = [
    "esp32c6",
    "phy-enable-usb",
    "utils",
    "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
