[package]
name = "underfloor-heating"
version = "0.1.0"
authors = ["Simon Jagoe <simon@simonjagoe.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false, features = ["alloc", "embassy-sync"] }
anyhow      =  { workspace = true }
rgb         = "0.8.29"
rand = "0.8.5"
fixed = "1.28.0"
control = { path = "../control" }
time = { version = "0.3.36", default-features = false }

[build-dependencies]
embuild = "0.32.0"

[package.metadata.espflash]
partition_table = "../../partition-table.csv"
